[package]
name = "blockchain-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10.8"
rust-crypto = "0.2.36"
bincode = "1.0.1"
failure = "0.1.8"
sled = "0.34.7"
log = "0.4.27"
env_logger = "0.11.8"
clap = "4.5.37"
bitcoincash-addr = "0.5.2"
rand = "0.3.23"
merkle-cbt = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rustyline = "15.0.0"